--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^2.13.4",
     "@nuxt/eslint": "^0.6.0",
     "nuxt": "^3.13.0",
     "vue": "latest",
