--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/content": "^2.13.4",
     "@nuxt/eslint": "^0.6.0",
+    "@nuxt/image": "^1.8.1",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
