--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/content": "^2.13.4",
     "@nuxt/eslint": "^0.6.0",
     "@nuxt/image": "^1.8.1",
+    "@nuxtjs/device": "^3.2.4",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
