--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/device": "^3.2.4",
     "nuxt": "^3.13.0",
+    "nuxt-gtag": "^3.0.1",
     "vue": "latest",
     "vue-router": "latest"
   },
