--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "nuxt-lodash": "^2.5.3"
+    "nuxt-lodash": "^2.5.3",
+    "unenv": "^1.10.0"
   }
 }
